Modify saving dir

--- a/nbs/access_logs.ipynb
+++ b/nbs/access_logs.ipynb
@@ -27,7 +27,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/07/21 13:25:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/07/27 07:56:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_file_path = \"access.log\"\n",
+    "log_file_path = \"/opt/workspace/access_logs/access.log\"\n",
     "\n",
     "combined_regex = r'^(\\S+) \\S+ (\\S+) \\[([^\\]]+)\\] \"([A-Z]+) ([^ \"]+)? HTTP/[0-9.]+\" ([0-9]{3}) ([0-9]+|-) \"([^\"]*)\" \"([^\"]*)'\n",
     "columns = ['client', 'userid', 'datetime', 'method', 'request', 'status', 'size', 'referer', 'user_agent']"
@@ -166,7 +166,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "29af1ed6-5a3b-4cf7-81e0-28b1612c3de5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -403,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "4710ed98-e692-448d-a1e0-a596badc0075",
    "metadata": {},
    "outputs": [
@@ -411,30 +413,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/07/21 13:26:45 ERROR TaskSchedulerImpl: Lost executor 1 on 172.19.0.5: Command exited with code 137\n",
-      "24/07/21 13:27:07 ERROR TaskSchedulerImpl: Lost executor 0 on 172.19.0.6: Command exited with code 137\n",
-      "24/07/21 13:27:17 ERROR TaskSchedulerImpl: Lost executor 3 on 172.19.0.5: Command exited with code 137\n",
+      "24/07/27 07:59:56 ERROR TaskSchedulerImpl: Lost executor 7 on 172.19.0.6: Command exited with code 137\n",
+      "24/07/27 08:00:15 ERROR TaskSchedulerImpl: Lost executor 8 on 172.19.0.4: Command exited with code 137\n",
+      "24/07/27 08:00:31 ERROR TaskSchedulerImpl: Lost executor 9 on 172.19.0.7: Command exited with code 137\n",
+      "24/07/27 08:00:45 ERROR TaskSchedulerImpl: Lost executor 10 on 172.19.0.6: Command exited with code 137\n",
+      "24/07/27 08:00:58 ERROR TaskSchedulerImpl: Lost executor 11 on 172.19.0.4: Command exited with code 137\n",
       "                                                                                \r"
      ]
     }
    ],
    "source": [
-    "web_logs_df.write.parquet(\"access_logs.parquet\")"
+    "web_logs_df.write.parquet(\"/opt/workspace/access_logs/access_logs.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "41f6cb9b-2d83-4ae6-a81a-5a14c292fbc9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = spark.read.parquet(\"access_logs.parquet\")"
+    "t = spark.read.parquet(\"/opt/workspace/access_logs/access_logs.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "9ba93116-2e27-46c0-bf08-d177cddee132",
    "metadata": {},
    "outputs": [
@@ -469,6 +473,13 @@
       "only showing top 20 rows\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -477,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "90962d07-746d-47a9-8bcf-4686fd09e358",
    "metadata": {},
    "outputs": [
@@ -485,7 +496,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "273M\taccess_logs.parquet/\n"
+      "du: cannot access 'access_logs.parquet/': No such file or directory\n"
      ]
     }
    ],
