--- a/nbs/access_logs.ipynb
+++ b/nbs/access_logs.ipynb
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "90962d07-746d-47a9-8bcf-4686fd09e358",
    "metadata": {},
    "outputs": [
@@ -496,12 +496,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "du: cannot access 'access_logs.parquet/': No such file or directory\n"
+      "273M\t/opt/workspace/access_logs/access_logs.parquet/\n"
      ]
     }
    ],
    "source": [
-    "! du -h access_logs.parquet/"
+    "! du -h /opt/workspace/access_logs/access_logs.parquet/"
    ]
   },
   {
